Includ my projects

--- a/index.html
+++ b/index.html
@@ -318,19 +318,19 @@
             <ul class="fa-ul mb-0">
               <li>
                 <i class="fa-li fa fa-check"></i>
-                Design Pattern
+                Design Pattern, SOLID, Clean Code
               </li>
               <li>
                 <i class="fa-li fa fa-check"></i>
-                JUnit
+                Scrum, XP
               </li>
               <li>
                 <i class="fa-li fa fa-check"></i>
-                Spring MVC, Boot, Data
+                Unit Test, Integration test, Mock
               </li>
               <li>
                 <i class="fa-li fa fa-check"></i>
-                Git Kraken
+                Hexagonal Architecture, MVC
               </li>
             </ul>
           </div>
@@ -342,49 +342,400 @@
           <div class="my-auto">
             <h2 class="mb-5">Projects</h2>
             <ul class="list-unstyled">
-              <li class="media">
-                <a
-                  href="https://play.google.com/store/apps/details?id=com.QuemSabe.NRSIM"
-                  target="_blank"
-                >
-                  <img
-                    src="./img/nr-sim.png"
-                    alt="NR-SIM"
-                    class="mr-3"
-                    style="width: 20%;"
-                  />
-                  <span>NR-SIM</span>
-                </a>
+              <li>
+                <div class="row">
+                  <div class="col">
+                    <h4>NR-SIM</h4>
+                    <a
+                      href="https://play.google.com/store/apps/details?id=com.QuemSabe.NRSIM"
+                      target="_blank"
+                    >
+                      <img
+                        src="./img/nr-sim.png"
+                        alt="NR-SIM"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>PlayStore</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/NR-SIM"
+                        target="_blank"
+                        >https://github.com/brenovit/NR-SIM</a
+                      >
+                    </p>
+                    <p>
+                      Projeto de Iniciação Cientifica. Jogo com propósito de
+                      validar os conhecimentos adquiridos pelos estudantes da
+                      área de segurança do trabalho de forma lúdica, sobre
+                      diversos aspectos regidos pelas normas brasileiras
+                      regulamentadoras (NBRs).
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>PersonDefense</h4>
+                    <a
+                      href="https://play.google.com/store/apps/details?id=com.ToBTeam.PersonDefense"
+                      target="_blank"
+                    >
+                      <img
+                        src="./img/person-defense.png"
+                        alt="Person Defense"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>PlayStore</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/PersonDefense"
+                        target="_blank"
+                        >https://github.com/brenovit/PersonDefense</a
+                      >
+                    </p>
+                    <p>
+                      Jogo no estilo Tower Defense com foco na conscientização
+                      do combate ao vetor Aedes Aegypti. Desenvolvido no Unity
+                      usando C#.
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Roll-a-Ball</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>PlayStore - Pending</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/Roll-a-Ball"
+                        target="_blank"
+                        >https://github.com/brenovit/Roll-a-Ball</a
+                      >
+                    </p>
+                    <p>
+                      Jogo mobile desenvolvido no Unity durante o Intercute
+                      2016.2. Onde o jogador controla uma bola usando o
+                      acelerômetro destruindo todos os blocos antes que o tempo
+                      termine.
+                    </p>
+                  </div>
+                </div>
               </li>
-              <li class="media">
-                <a
-                  href="https://play.google.com/store/apps/details?id=com.ToBTeam.PersonDefense"
-                  target="_blank"
-                >
-                  <img
-                    src="./img/person-defense.png"
-                    alt="Person Defense"
-                    class="mr-3"
-                    style="width: 20%;"
-                  />
-                  <span>Person Defense</span>
-                </a>
+              <li>
+                <div class="row">
+                  <div class="col">
+                    <h4>notaAqui</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://github.com/brenovit/note-app/blob/note-develop/src/main/webapp/resources/logo-via-logohub.png?raw=true"
+                        alt="notaAqui"
+                        class="mr-3"
+                        style="width: 50%;"
+                      />
+                      <span>Heroku - Peding</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/note-app"
+                        target="_blank"
+                        >https://github.com/brenovit/note-app</a
+                      >
+                    </p>
+                    <p>
+                      Projeto de Pós-Graduação para implementação de
+                      DesignPatterns. CRUD de Notas usando sistema de jobs para
+                      emissão de notificaçao.
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Rainbow</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Heroku - Pending</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/rainbow-frontend"
+                        target="_blank"
+                        >https://github.com/brenovit/rainbow-frontend</a
+                      >
+                    </p>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/rainbow-backend"
+                        target="_blank"
+                        >https://github.com/brenovit/rainbow-backend</a
+                      >
+                    </p>
+                    <p>
+                      Complete application for management collaborators using
+                      Spring Boot (Java 11) + Angular 9 + MySql + Docker
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Luv-Shop</h4>
+                    <a href="https://luv-shop.herokuapp.com/" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Heroku</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/luvshop-frontend"
+                        target="_blank"
+                        >https://github.com/brenovit/luvshop-frontend</a
+                      >
+                    </p>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/luvshop-backend"
+                        target="_blank"
+                        >https://github.com/brenovit/luvshop-backend</a
+                      >
+                    </p>
+                    <p>
+                      Projeto do curso de desenvolvedor Fullstack com Java e
+                      Angular 9
+                    </p>
+                  </div>
+                </div>
               </li>
-              <li class="media">
-                <a
-                  href="https://brenovit.github.io/dependencies-manager/"
-                  target="_blank"
-                >
-                  <img
-                    src="img/dependency-manager.png"
-                    alt="Dependency Manager"
-                    class="mr-3"
-                    style="width: 20%;"
-                  />
-                  <span>Dependency Manager</span>
-                </a>
+              <li>
+                <div class="row">
+                  <div class="col">
+                    <h4>Dependency Manager</h4>
+                    <a
+                      href="https://brenovit.github.io/dependencies-manager/"
+                      target="_blank"
+                    >
+                      <img
+                        src="img/dependency-manager.png"
+                        alt="Dependency Manager"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Heroku</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/dependencies-manager"
+                        target="_blank"
+                        >https://github.com/brenovit/dependencies-manager</a
+                      >
+                    </p>
+                    <p>
+                      Mapa de dependências usando VueJS e Vis
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>ReclameAi!</h4>
+                    <a
+                      href="https://reclame-ai1.herokuapp.com/"
+                      target="_blank"
+                    >
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Heroku</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/reclame-ai"
+                        target="_blank"
+                        >https://github.com/brenovit/reclame-ai</a
+                      >
+                    </p>
+                    <p>
+                      Desafio em Ruby para postagem de reclamações
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>GitHub-Info-React</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Pending</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/GitHub-Info-React"
+                        target="_blank"
+                        >https://github.com/brenovit/GitHub-Info-React</a
+                      >
+                    </p>
+                    <p>
+                      Projeto de estudo sobre React.js. [jscasts]
+                    </p>
+                  </div>
+                </div>
               </li>
-            </ul>
+              <li>
+                <div class="row">
+                  <div class="col">
+                    <h4>Product Store</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Pending</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/product-store"
+                        target="_blank"
+                        >https://github.com/brenovit/product-store</a
+                      >
+                    </p>
+                    <p>
+                      CRUD usando VueJs + SpringBoot + MySql + Docker
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Store</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Pending</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/store"
+                        target="_blank"
+                        >https://github.com/brenovit/store</a
+                      >
+                    </p>
+                    <p>
+                      Securing RESTful API with Spring Boot, Security, JWT and
+                      MongoDB
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>MySkill</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>Pendind</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/my-skills"
+                        target="_blank"
+                        >https://github.com/brenovit/my-skills</a
+                      >
+                    </p>
+                    <p>
+                      Project created during The Ultimate Vue 2 Crash Course -
+                      Learn by Example, using the main concepts about components
+                      and animation with VueJs
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <!--
+              <li>
+                <div class="row">
+                  <div class="col">
+                    <h4>Title</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>local</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/source"
+                        target="_blank"
+                        >https://github.com/brenovit/source</a
+                      >
+                    </p>
+                    <p>
+                      No Description
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Title</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>local</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/source"
+                        target="_blank"
+                        >https://github.com/brenovit/source</a
+                      >
+                    </p>
+                    <p>
+                      No Description
+                    </p>
+                  </div>
+                  <div class="col">
+                    <h4>Title</h4>
+                    <a href="#" target="_blank">
+                      <img
+                        src="https://static.thenounproject.com/png/340719-200.png"
+                        alt="NoImage"
+                        class="mr-3"
+                        style="width: 20%;"
+                      />
+                      <span>local</span>
+                    </a>
+                    <p>
+                      <a
+                        href="https://github.com/brenovit/source"
+                        target="_blank"
+                        >https://github.com/brenovit/source</a
+                      >
+                    </p>
+                    <p>
+                      No Description
+                    </p>
+                  </div>
+                </div>
+              </li>
+            --></ul>
           </div>
         </section>
       </section>
